# omni-glass

./: .gitignore  CONTRIBUTING.md  OMNI_GLASS_FIX_ERROR_SPEC.md  OMNI_GLASS_WEEK2_BRIEF.md  OMNI_GLASS_WEEK4_BRIEF.md  Omni-Glass- LLM Integration — Technical PRD.docx  Omni_Glass_PRD.docx  README.md  ROADMAP.md  action-menu.html  package-lock.json  package.json  permission-prompt.html  text-launcher.html  tray-menu.html  vite.config.ts
docs/: plugin-guide.md
docs/blog/: sandboxing-mcp-plugins.md
plugins/com.omni-glass.github-issues/: index.js  omni-glass.plugin.json  package.json
plugins/com.omni-glass.slack-webhook/: index.js  omni-glass.plugin.json  package.json
plugins/template/: README.md  index.js  omni-glass.plugin.json  package.json
src/: action-menu-render.ts  action-menu-results.ts  action-menu.ts  overlay.ts  permission-prompt.ts  settings-local.ts  settings.ts  text-launcher.ts  tray-menu.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  local_model_commands.rs  pipeline.rs  pipeline_text.rs  settings_commands.rs  tray.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/llm/: classify.rs  execute.rs  gemini.rs  local.rs  local_state.rs  mod.rs  model_manager.rs  model_registry.rs  plugin_args.rs  prompts.rs  prompts_execute.rs  prompts_execute_local.rs  prompts_local.rs  prompts_text_command.rs  provider.rs  types.rs
src-tauri/src/mcp/: README.md  approval.rs  approval_commands.rs  builtins.rs  client.rs  config_store.rs  loader.rs  manifest.rs  mod.rs  registry.rs  types.rs
src-tauri/src/mcp/sandbox/: env_filter.rs  linux.rs  macos.rs  mod.rs  risk.rs  windows.rs
src-tauri/src/ocr/: apple_vision.rs  heuristics.rs  mod.rs
src-tauri/src/safety/: command_check.rs
src-tauri/swift-src/: ocr_bridge.swift
src-tauri/tests/: classify_integration.rs  execute_integration.rs  local_e2e_bench.rs  local_llm_test.rs  mcp_integration.rs  registry_bench.rs  sandbox_escape.rs  sandbox_escape_exec.rs  streaming_classify_test.rs
src-tauri/tests/sandbox_helpers/: mod.rs
tools/ocr-bench/: Cargo.toml  build.rs
tools/ocr-bench/src/: main.rs
tools/ocr-bench/swift-src/: bridging-header.h  ocr_bridge.swift
