[package]
name = "omni-glass"
version = "0.1.0"
edition = "2021"
description = "Open-source desktop AI utility — snip any screen region, get contextual actions"
license = "MIT"

[lib]
name = "omni_glass_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-bridge-build = "0.1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.8"
image = "0.25"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
swift-bridge = "0.1"
reqwest = { version = "0.12", features = ["json"] }
arboard = "3"

# Optimize image-heavy crates in dev builds.
# Without this, to_rgb8() and PNG encoding take ~1800ms in debug mode
# vs ~100ms with optimizations. Our own code stays debuggable.
[profile.dev.package.image]
opt-level = 2

[profile.dev.package.png]
opt-level = 2

[profile.dev.package.flate2]
opt-level = 2

[profile.dev.package.miniz_oxide]
opt-level = 2

[profile.dev.package.zune-jpeg]
opt-level = 2
